2005-03-22  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/ia64/common.h: Removed the inclusion of atomicity.h

2005-03-22  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/compat/javadoc.in,
	kaffe/scripts/compat/javadoc.in:
	Added -Xmx512M to parameters used to invoke Kaffe to be able to 
	deal with running javadoc on Kaffe's source tree out of the box.

	* m4/m4/ac_prog_antlr.m4: Fixed antlr.jar test to bail out if 
	no antlr.jar can be found.
	
	Resynced with gjdoc.
	
	2005-03-14  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/java2xhtml/Java2xhtml.java: Added
	license boilerplate; updated copyright and license in usage
	output.

	2005-03-13  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/gjdoc/Main.java: Added method
	execute(String, String[]) and commented-out empty shells for
	additional execute methods.  Thanks to Jerry Haltom.
	
	2005-03-08  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/gjdoc/Main.java: add support for option
	-reflection; disable reflection by default.

	* src/gnu/classpath/tools/gjdoc/RootDocImpl.java: only use
	reflection if enabled on command line.

	2005-03-08  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/gjdoc/ExecutableMemberDocImpl.java:
	properly parse the thrown exception immediately preceding the
	closing semicolon of an interface method declaration.

	Reported by Robert Schuster

	2005-03-04  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/gjdoc/SeeTagImpl.java: Removed bogus
	Thread.dumpStack() invocation.

	Reported by Arnaud Vandyck

	* src/gnu/classpath/tools/gjdoc/Main.java: Pass DocErrorReporter
	in reflected invocation of Doclet's validOptions() method.

	Reported by Christopher Oezbek

	2005-02-21  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/doclets/htmldoclet/HtmlDoclet.java: fix
	support for option -title.

	2005-02-14  Julian Scheid  <julian@sektor37.de>
